--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.1'
+        kotlinCompilerExtensionVersion '1.5.3'
     }
     packaging {
         resources {
@@ -101,6 +101,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
     // Coil
-    implementation "io.coil-kt:coil:1.1.1"
-    implementation "com.google.accompanist:accompanist-coil:0.7.0"
+    implementation "io.coil-kt:coil-compose:2.5.0"
+//    implementation "io.coil-kt:coil:2.5.0"
+//    implementation "com.google.accompanist:accompanist-coil:0.10.0"
 }
